# anise

./: README.md
anise/: AUTHORS  Anise.dsp  Anise.vcp  INSTALL  Makefile.am  NEWS  README  animation.cpp  animation.h  anise.aps  anise.h  anise.rc  anise.vcproj  config.cpp  config.h  configure.ac  debug.h  dialogue.cpp  dialogue.h  dialogue_gamebox.cpp  dialogue_jis.cpp  dialogue_jishan.cpp  dialogue_sagwa.cpp  engine.cpp  engine.h  field.cpp  field.h  field_move.cpp  field_path.cpp  file.cpp  file.h  font_gamebox.h  font_jis.h  font_jishan.h  image.cpp  image.h  input.cpp  input.h  main.cpp  memory.cpp  (+71 more)
anise/homebrew/: anise.rb
aniseCE/: AUTHORS  Anise.dev  Anise.dsp  Anise.dsw  Anise.vcp  Anise.vcw  Anise_private.h  Anise_private.rc  COMMON.H  ChangeLog  INSTALL  Makefile.am  NEWS  WAVEMNG.CPP  WAVEMNG.H  animation.cpp  anise.h  anise.vcproj  autogen.sh  debug.h  dialogue.cpp  dialogue_jis.cpp  engine.cpp  engine.h  field.cpp  field.h  field_move.cpp  file.cpp  file.h  image.cpp  input.cpp  input.h  main.cpp  memory.cpp  memory.h  memory_block.cpp  memory_segment.h  mfile.cpp  mfile.h  op4_blitdirect.cpp  (+43 more)
