bin_PROGRAMS = anise

anise_CXXFLAGS = $(CFLAGS)
anise_LDFLAGS = $(LIBS)

anise_SOURCES = \
	main.cpp \
	engine.cpp engine.h \
	op_animate.cpp \
	op_call.cpp \
	op_callprocedure.cpp \
	op_clearscreen.cpp \
	op_defineprocedure.cpp \
	op_delay.cpp \
	op_displaynumber.cpp \
	op_if.cpp \
	op_makearray.cpp \
	op_makebytearray.cpp \
	op_null.cpp \
	op_saveconstant.cpp \
	op_saveexpression.cpp \
	op_setbasevariable.cpp \
	op_setcolor.cpp \
	op_setdialoguecolor.cpp \
	op_utility.cpp \
	op_wait.cpp \
	op4_blitdirect.cpp \
	op4_blitmasked.cpp \
	op4_blitswapped.cpp \
	op4_break.cpp \
	op4_callscript.cpp \
	op4_changeslot.cpp \
	op4_checkclick.cpp \
	op4_continue.cpp \
	op4_displayselection.cpp \
	op4_drawinversebox.cpp \
	op4_drawsolidbox.cpp \
	op4_dummy.cpp \
	op4_field.cpp \
	op4_initializeselection.cpp \
	op4_jumpscript.cpp \
	op4_loadfile.cpp \
	op4_loadimage.cpp \
	op4_manipulateflag.cpp \
	op4_mouse.cpp \
	op4_palette.cpp \
	op4_sound.cpp \
	op4_while.cpp \
	oput_dummy.cpp \
	oput_overlapscreen.cpp \
	oput_sprayscreen.cpp \
	oput_swapscreen.cpp \
	oput_unpackaniheader.cpp \
	script_opre.cpp \
	anise.h \
	debug.h \
	memory.cpp memory.h \
	memory_segment.cpp memory_segment.h \
	memory_block.cpp memory_block.h \
	memory_index.h \
	timer.cpp timer.h \
	input.cpp input.h \
	sound.cpp sound.h \
	video.cpp video.h \
	script.cpp script.h \
	script_value.cpp \
	script_code.h \
	script_parameter.cpp script_parameter.h \
	script_stack.cpp script_stack.h \
	file.cpp file.h \
	image.cpp image.h \
	animation.cpp animation.h \
	dialogue.cpp dialogue.h \
	dialogue_jis.cpp \
	dialogue_jishan.cpp \
	dialogue_gamebox.cpp \
	field.cpp field.h \
	field_move.cpp \
	field_path.cpp \
	option.cpp option.h \
	opl3.cpp opl3.h \
	ymf262.cpp ymf262.h

EXTRA_DIST = \
	autogen.sh \
	anise.ico \
	anise.rc \
	anise.vcproj \
	resource.h
